crates/check_cli/tests/snapshots/main_commands_check/upgrade_severity.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `check.json`

```json
{
  "linter": {
    "rules": {
      "recommended": true,
      "style": {
        "noNegationElse": "error"
      }
    }
  }
}
```

## `file.js`

```js
if(!cond) { exprA(); } else { exprB() }
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.js:1:1 lint/style/noNegationElse  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Invert blocks when performing a negation test.
  
  > 1 │ if(!cond) { exprA(); } else { exprB() }
      │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  
  i Safe fix: Invert the condition and the blocks.
  
  - if(!cond)·{·exprA();·}·else·{·exprB()·}
  + if(cond)·{·exprB()·}·else·{·exprA();·}
  

```

```block
file.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - if(!cond)·{·exprA();·}·else·{·exprB()·}
      1 │ + if·(!cond)·{
      2 │ + → exprA();
      3 │ + }·else·{
      4 │ + → exprB();
      5 │ + }
      6 │ + 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 2 errors.
```
