crates/check_cli/tests/snapshots/main_commands_check/use_literal_keys_should_emit_correct_ast_issue_266.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `fix.js`

```js
value.optimizelyService = optimizelyService;

```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
