crates/check_cli/tests/snapshots/main_commands_check/write_ok.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `fix.js`

```js
1 >= 0;

```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
